syntax = "proto3";
package protocol;
service S2SService {
  rpc Request(S2SRequest) returns (S2SResponse);
  rpc PING(Timestamp) returns (Timestamp);
}
service S2CService {
  rpc Request(C2SRequest) returns (S2CResponse);
  rpc PING(Timestamp) returns (Timestamp);
}

message Timestamp {
  uint64 Timestamp = 1;
}
message ServerInfo {
  string ID = 1;
  string Type = 2;
  string Addr = 3;
  string AdditionalInfo = 4;
}
message S2CInfo {
  ServerInfo ServerInfo = 1;
  string RequestSendOption = 2;
  repeated S2CInfo Candidates = 3;
}
message S2SInfo {
  ServerInfo ServerInfo = 1;
  string ResponseSendOption = 2;
  string RequestSendOption = 3;
  repeated S2SInfo Candidates = 4;
  S2CInfo S2CInfo = 5;
}
message S2SRequest {
  S2SInfo S2SInfo = 1;
  bool Disconnect = 2;
}
message S2SResponse {
  S2SInfo S2SInfo = 1;
  int64 Timeout = 2;
  bool Reject = 3;
}
message ClientInfo {
  string ID = 1;
  string Type = 2;
  string AdditionalInfo = 3;
}
message C2SInfo {
  ClientInfo ClientInfo = 1;
  string ResponseSendOption = 2;
}
message C2SRequest {
  C2SInfo C2SInfo = 1;
  bool Disconnect = 2;
}
message S2CResponse {
  S2CInfo S2CInfo = 1;
  int64 Timeout = 2;
  bool Reject = 3;
}